sumo/tests/netconvert/errors/testsuite.netconvert
# Tests what happens if the output can not be written
false_output

# Tests what happens if an unknown option is given
unknown_option

# Test for not buildable plain output
false_plain_output

# bogus argument for option --keep-edges.by-vclass
invalid_argument_vclass

# warn about large coordinates
large_coordinates
